--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
   "dependencies": {
     "debug": "^2.0.0",
     "glob": "~3.2.6",
-    "java": ">=0.2.8",
-    "q": "^1.0.1",
-    "underscore": "~1.5.2"
+    "java": ">=0.4.3",
+    "lodash": "^2.4.1",
+    "q": "^1.0.1"
   },
   "devDependencies": {
     "jshint": "~2.3.0",
