--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "gremlin",
-  "description": "Gremlin for graph databases which implement the Blueprints property graph data model.",
-  "version": "0.4.0",
+  "name": "gremlin-v3",
+  "description": "Gremlin for graph databases which implement the TinkerPop3 property graph data model.",
+  "version": "0.0.1",
   "keywords": [
+    "gremlin",
+    "tinkerpop3",
     "graph",
     "database",
     "tinkerpop",
-    "gremlin",
     "blueprints"
   ],
-  "homepage": "https://github.com/inolen/gremlin-node",
+  "homepage": "https://github.com/jimlloyd/gremlin-v3",
   "license": "MIT",
   "authors": [
     {
-      "name": "Frank Panetta",
-      "email": "frank.panetta@entrendipity.com.au"
+      "name": "Jim Lloyd",
+      "email": "jim.lloyd@gmail.com"
     },
     {
       "name": "Anthony Pesch",
       "email": "inolen@gmail.com"
     },
     {
-      "name": "Jim Lloyd",
-      "email": "jim.lloyd@gmail.com"
+      "name": "Frank Panetta",
+      "email": "frank.panetta@entrendipity.com.au"
     }
   ],
   "contributors": [
@@ -32,7 +33,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/inolen/gremlin-node.git"
+    "url": "https://github.com/jimlloyd/gremlin-v3.git"
   },
   "main": "lib/gremlin.js",
   "readmeFilename": "README.md",
