--- a/pom.xml
+++ b/pom.xml
@@ -5,35 +5,48 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.entrendipity</groupId>
   <artifactId>gremlin-node</artifactId>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
   <version>0.1.14</version>
   <name>gremlin</name>
 
   <properties>
+    <junit.version>4.11</junit.version>
     <gremlin.version>3.0.0.M7</gremlin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>com.tinkerpop</groupId>
       <artifactId>gremlin-core</artifactId>
       <version>${gremlin.version}</version>
     </dependency>
+
     <dependency>
       <groupId>com.tinkerpop</groupId>
       <artifactId>gremlin-groovy</artifactId>
       <version>${gremlin.version}</version>
     </dependency>
+
     <dependency>
       <groupId>com.tinkerpop</groupId>
       <artifactId>tinkergraph-gremlin</artifactId>
       <version>${gremlin.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
@@ -48,7 +61,25 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
+
+    <pluginManagement>
+      <plugins>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.1</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
+
+      </plugins>
+    </pluginManagement>
+
   </build>
 
 </project>
