--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "debug": "^2.0.0",
     "glob": "~3.2.6",
     "java": ">=0.4.3",
+    "json-stable-stringify": "^1.0.0",
     "lodash": "^2.4.1",
     "q": "^1.0.1"
   },
