--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <!-- Point to the SonaType snapshot repo, so that we don't depend on Maven environment -->
+  <repositories>
+    <repository>
+      <snapshots />
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
+  </repositories>
+
   <dependencies>
 
     <dependency>
